# execsnoop-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md
src/: event.rs  event_reader.rs  execfn.rs  lib.rs  main.rs  readable.rs
src/bpf/: execsnoop.bpf.c  execsnoop.h
