[package]
name = "execsnoop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
aya = "0.13.1"
bytes = "1.8.0"
env_logger = "0.11.5"
libc = "0.2.162"
log = "0.4.22"
procfs = "0.17.0"
signal = "0.7.0"
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time"] }
